--- a/index.css
+++ b/index.css
@@ -46,17 +46,36 @@ body {
   display: flex;
   flex-direction: column;
   height: 94vh;
-  align-items: center;
 }
 .bigcontainer h1 {
   font-size: 5rem;
 }
 .bigcontainer .containerSection {
-  flex-grow: 1;
   color: white;
 }
 .bigcontainer .containerSection #booklistSection {
   display: none;
+  flex-direction: column;
+}
+.bigcontainer .containerSection #booklistSection .library {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.bigcontainer .containerSection #booklistSection .library .book-container {
+  display: flex;
+  border-bottom: 1px solid beige;
+}
+.bigcontainer .containerSection #booklistSection .library .book-container .book-title {
+  flex-grow: 1;
+  font-size: 1.5rem;
+}
+.bigcontainer .containerSection #booklistSection .library .book-container .remove-book {
+  margin-left: auto;
+  background-color: #ba8ce5;
+  border: none;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .bigcontainer .containerSection #main-screen {
   display: flex;
