--- a/index.scss
+++ b/index.scss
@@ -57,18 +57,42 @@ body {
   display: flex;
   flex-direction: column;
   height: 94vh;
-  align-items: center;
 
   h1{
     font-size: 5rem;
   }
 
   .containerSection {
-    flex-grow: 1;
     color: $color-letters;
 
     #booklistSection {
       display: none;
+      flex-direction: column;
+  
+
+      .library {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        .book-container {
+          display: flex;
+          border-bottom: 1px solid beige;
+
+          .book-title {
+            flex-grow: 1;
+            font-size: 1.5rem;
+          }
+          .remove-book {
+            margin-left: auto;
+            background-color: $bg-button;
+            border: none;
+            padding-left: 1.5rem;
+            padding-right: 1.5rem;
+          }
+
+        }
+      }
     }
 
     #main-screen {
