--- a/index.scss
+++ b/index.scss
@@ -27,6 +27,8 @@ body {
   left: 0;
   right: 0;
   padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
 
   .nav-list {
     display: flex;
@@ -50,6 +52,11 @@ body {
         color: darkblue;
       }
     }
+  }
+
+  .date {
+    margin-left: auto;
+    font-size: 1.2rem;
   }
 }
 
