--- a/index.scss
+++ b/index.scss
@@ -2,7 +2,6 @@ $bg-main: #519ee1;
 $bg-button: #ba8ce5;
 $color-letters: white;
 
-
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -41,7 +40,6 @@ body {
     letter-spacing: 0.15rem;
 
     li {
-      
       a {
         color: $color-letters;
         text-decoration: none;
@@ -65,7 +63,7 @@ body {
   flex-direction: column;
   height: 94vh;
 
-  h1{
+  h1 {
     font-size: 5rem;
   }
 
@@ -75,7 +73,7 @@ body {
     #booklistSection {
       display: none;
       flex-direction: column;
-  
+
 
       .library {
         display: flex;
@@ -90,6 +88,7 @@ body {
             flex-grow: 1;
             font-size: 1.5rem;
           }
+
           .remove-book {
             margin-left: auto;
             background-color: $bg-button;
@@ -97,7 +96,6 @@ body {
             padding-left: 1.5rem;
             padding-right: 1.5rem;
           }
-
         }
       }
     }
@@ -107,7 +105,7 @@ body {
     }
 
     #contact-section {
-      display: none
+      display: none;
     }
-  };
+  }
 }
